@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.15 2006/10/18 21:40:17 rillig Exp $
+$NetBSD: distinfo,v 1.16 2006/12/27 13:40:42 wulf Exp $
 
-SHA1 (bluefish-1.0.5.tar.bz2) = 084ecbf348fd8eb092c9fc702615c9f82a544d9d
-RMD160 (bluefish-1.0.5.tar.bz2) = 5cb388e2f4d1193a9d51ebed26ab523bf6809208
-Size (bluefish-1.0.5.tar.bz2) = 1492532 bytes
+SHA1 (bluefish-1.0.6.tar.bz2) = 996bed51e2f7d0689600e8c52389f889c9df19bb
+RMD160 (bluefish-1.0.6.tar.bz2) = 2ed4a6cae2bcf6886f15fbcb2be2bc997d767ad8
+Size (bluefish-1.0.6.tar.bz2) = 1504685 bytes
 SHA1 (patch-aa) = bba2581eefa4efa00943b9f158898fe4743b56cc
 SHA1 (patch-ab) = ab0d1d172b0d3097f85588a5f24304501671d048
 SHA1 (patch-ac) = de8871c7d5ab63153f10a787debb1deed4420577
